Enable JDK 21 builds
Signed-off-by: Ashley <73482956+ascopes@users.noreply.github.com>